melhorias no código da seção de metadata do filme.

--- a/index.html
+++ b/index.html
@@ -12,26 +12,24 @@
 </head>
 <body>
     <section class="hero">
-        <h1 class="hero__branding">
+        <h1>
             <img class="hero__branding-image" src="./src/images/logo.png" alt="">
         </h1>
         <p class="hero__text">
             As consequências devastadoras dos atos de Thanos, que dizimaram metade das criaturas do universo e destruíram os Vingadores, leva os heróis remanescentes a tomarem uma atitude final na grande conclusão da sequência de vinte dois filmes da Marvel Studios, "Vingadores: Ultimato”
         </p>
         <div class="hero__movie-metadata">
-            <div class="hero__movie-metadata-info-group">
+            <div class="hero__movie-metadata-group">
                 <span class="hero__movie-metadata-info">IMDb 8,4</span>
                 <span class="hero__movie-metadata-info">3 h 3 min</span>
                 <span class="hero__movie-metadata-info">2019</span>
-                <span class="hero__movie-metadata-info">
-                    <img src="src/images/12+_icon.png" alt="">
-                </span>
+                <img class="hero__movie-metadata-info" src="src/images/12+_icon.png" alt="Classificação indicativa: 12+">
             </div>
-            <div class="hero__movie-genres-group">
-                <span class="hero__movie-genre">Ficção científica</span>
-                <span class="hero__movie-genre">Drama</span>
-                <span class="hero__movie-genre">Ambicioso</span>
-                <span class="hero__movie-genre">Divertido</span>
+            <div class="hero__movie-metadata-group">
+                <span class="hero__movie-metadata-info">Ficção científica</span>
+                <span class="hero__movie-metadata-info">Drama</span>
+                <span class="hero__movie-metadata-info">Ambicioso</span>
+                <span class="hero__movie-metadata-info">Divertido</span>
             </div>
         </div>
     </section>
