--- a/index.html
+++ b/index.html
@@ -34,93 +34,95 @@
         </div>
     </section>
     <section class="tabs">
-        <div class="tabs__navegation">
-            <div class="tabs__buttons-group">
-                <button data-tab-button="related" class="tabs__button tabs__button--is-active">Relacionados</button>
-                <button data-tab-button="details" class="tabs__button">Detalhes</button>
+        <nav class="tab-navegation">
+            <button data-tab-button="related" class="tab-navegation-button tab-navegation-button--is-active">Relacionados</button>
+            <button data-tab-button="details" class="tab-navegation-button">Detalhes</button>
+        </nav>
+        <div data-tab-id="related" class="tab-container">
+            <div class="tab tab--show">
+                <h2 class="tab-name">Outros usuários também assistiram</h2>
+                <hr>
+                <br>
+                <ul class="tab-content">
+                    <li class="tab-content__movie">
+                        <a class="tab-content__movie-link" href="#">
+                            <img class="tab-content__movie-image" src="src/images/other-movies/movie1.webp" alt="">
+                        </a>
+                    </li>
+                    <li class="tab-content__movie">
+                        <a class="tab-content__movie-link" href="#">
+                            <img class="tab-content__movie-image" src="src/images/other-movies/movie2.webp" alt="">
+                        </a>
+                    </li>
+                    <li class="tab-content__movie">
+                        <a class="tab-content__movie-link" href="#">
+                            <img class="tab-content__movie-image" src="src/images/other-movies/movie3.webp" alt="">
+                        </a>
+                    </li>
+                    <li class="tab-content__movie">
+                        <a class="tab-content__movie-link" href="#">
+                            <img class="tab-content__movie-image" src="src/images/other-movies/movie4.webp" alt="">
+                        </a>
+                    </li>
+                    <li class="tab-content__movie">
+                        <a class="tab-content__movie-link" href="#">
+                            <img class="tab-content__movie-image" src="src/images/other-movies/movie5.webp" alt="">
+                        </a>
+                    </li>
+                    <li class="tab-content__movie">
+                        <a class="tab-content__movie-link" href="#">
+                            <img class="tab-content__movie-image" src="src/images/other-movies/movie6.webp" alt="">
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
-        <div data-tab-id="related" class="tabs__tab tabs__tab--show">
-            <h2 class="tabs__tab-name">Outros usuários também assistiram</h2>
-            <hr>
-            <br>
-            <ul class="tabs__tab-content">
-                <li class="tabs__tab-item">
-                    <a class="tabs__tab-link" href="#">
-                        <img class="tabs__tab-image" src="src/images/other-movies/movie1.webp" alt="">
-                    </a>
-                </li>
-                <li class="tabs__tab-item">
-                    <a class="tabs__tab-link" href="#">
-                        <img class="tabs__tab-image" src="src/images/other-movies/movie2.webp" alt="">
-                    </a>
-                </li>
-                <li class="tabs__tab-item">
-                    <a class="tabs__tab-link" href="#">
-                        <img class="tabs__tab-image" src="src/images/other-movies/movie3.webp" alt="">
-                    </a>
-                </li>
-                <li class="tabs__tab-item">
-                    <a class="tabs__tab-link" href="#">
-                        <img class="tabs__tab-image" src="src/images/other-movies/movie4.webp" alt="">
-                    </a>
-                </li>
-                <li class="tabs__tab-item">
-                    <a class="tabs__tab-link" href="#">
-                        <img class="tabs__tab-image" src="src/images/other-movies/movie5.webp" alt="">
-                    </a>
-                </li>
-                <li class="tabs__tab-item">
-                    <a class="tabs__tab-link" href="#">
-                        <img class="tabs__tab-image" src="src/images/other-movies/movie6.webp" alt="">
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div data-tab-id="details" class="tabs__tab">
-            <h2 class="tabs__tab-name">Detalhes</h2>
-            <hr>
-            <br>
-            <div class="tabs__tab-content">
-                <div class="tabs__left-column">
-                    <p>
-                        No final épico da Saga do Infinito, os Vingadores enfrentam o vilão mais poderoso do universo, Thanos. Quando eventos devastadores eliminam metade da população mundial e dividem suas fileiras, o resto dos heróis lutam para avançar. Mas eles devem se unir para restaurar a ordem e a harmonia no universo e trazer de volta seus entes queridos. Algumas sequências ou padrões de luz intermitente podem afetar telespectadores fotossensíveis.
-                    </p>
-                </div>
-                <div class="tabs__rigth-column">
-                    <div class="tabs__rigth-column-left">
-                        <div class="tabs__info-group">
-                            <p class="tabs__info-name">Duração:</p>
-                            <p class="tabs__info">3h 5min</p>
-                        </div>
-                        <div class="tabs__info-group">
-                            <p class="tabs__info-name">Data de lançamento:</p>
-                            <p class="tabs__info">2019</p>
-                        </div>
-                        <div class="tabs__info-group">
-                            <p class="tabs__info-name">Gênero:</p>
-                            <p class="tabs__info">Ficção científica, Fantasia, Super-Heróis, Ação e aventura</p>
-                        </div>
-                        <div class="tabs__info-group">
-                            <p class="tabs__info-name">Classificação:</p>
-                            <img class="tabs__info-img" src="src/images/12+_icon.png" alt="">
-                            <p class="tabs__info">Violência</p>
-                            <p class="tabs__info">Drogas Lícitas</p>
-                        </div>
+        <div data-tab-id="details" class="tab-container">
+            <div class="tab">
+                <h2 class="tab-name">Detalhes</h2>
+                <hr>
+                <br>
+                <div class="tab-content">
+                    <div class="tab__movie-description">
+                        <p>
+                            No final épico da Saga do Infinito, os Vingadores enfrentam o vilão mais poderoso do universo, Thanos. Quando eventos devastadores eliminam metade da população mundial e dividem suas fileiras, o resto dos heróis lutam para avançar. Mas eles devem se unir para restaurar a ordem e a harmonia no universo e trazer de volta seus entes queridos. Algumas sequências ou padrões de luz intermitente podem afetar telespectadores fotossensíveis.
+                        </p>
                     </div>
-                    <div class="tabs__rigth-column-right">
-                        <div class="tabs__info-group">
-                            <p class="tabs__info-name">Direção:</p>
-                            <p class="tabs__info">Anthony Russo, Joe Russo</p>
+                    <div class="tab__movie-details">
+                        <div class="tab__movie-details-overview">
+                            <div class="tab__info-group">
+                                <p class="tab__info-name">Duração:</p>
+                                <p>3h 5min</p>
+                            </div>
+                            <div class="tab__info-group">
+                                <p class="tab__info-name">Data de lançamento:</p>
+                                <p>2019</p>
+                            </div>
+                            <div class="tab__info-group">
+                                <p class="tab__info-name">Gênero:</p>
+                                <p>Ficção científica, Fantasia, Super-Heróis, Ação e aventura</p>
+                            </div>
+                            <div class="tab__info-group">
+                                <p class="tab__info-name">Classificação:</p>
+                                <img class="tab__info-image" src="src/images/12+_icon.png" alt="">
+                                <p>Violência</p>
+                                <p>Drogas Lícitas</p>
+                            </div>
                         </div>
-                        <div class="tabs__info-group">
-                            <p class="tabs__info-name">Elenco:</p>
-                            <p class="tabs__info">Robert Downey Jr.</p>
-                            <p class="tabs__info">Chris Evans</p>
-                            <p class="tabs__info">Mark Ruffalo</p>
-                            <p class="tabs__info">Chris Hemsworth</p>
-                            <p class="tabs__info">Scarlett Johansson</p>
-                            <p class="tabs__info">Jeremy Renner</p>
+                        <div class="tab__movie-details-cast">
+                            <div class="tab__info-group">
+                                <p class="tab__info-name">Direção:</p>
+                                <p>Anthony Russo, Joe Russo</p>
+                            </div>
+                            <div class="tab__info-group">
+                                <p class="tab__info-name">Elenco:</p>
+                                <p>Robert Downey Jr.</p>
+                                <p>Chris Evans</p>
+                                <p>Mark Ruffalo</p>
+                                <p>Chris Hemsworth</p>
+                                <p>Scarlett Johansson</p>
+                                <p>Jeremy Renner</p>
+                            </div>
                         </div>
                     </div>
                 </div>
