--- a/index.html
+++ b/index.html
@@ -129,7 +129,41 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <img class="footer__logo" src="src/images/logo.png" alt="">
+        <div class="footer__container">
+            <ul class="footer__link-list">
+                <li>
+                    <a href="#" class="footer__link">
+                        Termos e Aviso de Privacidade
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="footer__link">
+                        Envie-nos comentários
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="footer__link">
+                        Ajuda
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="footer__link">
+                        Proteção de Dados no Brasil
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="footer__link">
+                        Anúncios personalizados
+                    </a>
+                </li>
+            </ul>
+            <p class="footer__text">© 1996-2023, Vingadores Ultimato, Inc. ou respetivas afiliadas</p>
+        </div>
+    </footer>
 
+    <script src="https://kit.fontawesome.com/7ced5a16e0.js" crossorigin="anonymous"></script>
     <script src="src/scripts/main.js"></script>
 </body>
 </html>
