adicionando botões no hero

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1>
             <img class="hero__branding-image" src="./src/images/logo.png" alt="">
         </h1>
+        <h2 class="hero__title">Vingadores Ultimato</h2>
         <p class="hero__text">
             As consequências devastadoras dos atos de Thanos, que dizimaram metade das criaturas do universo e destruíram os Vingadores, leva os heróis remanescentes a tomarem uma atitude final na grande conclusão da sequência de vinte dois filmes da Marvel Studios, "Vingadores: Ultimato”
         </p>
@@ -31,6 +32,14 @@
                 <span class="hero__movie-metadata-info">Ambicioso</span>
                 <span class="hero__movie-metadata-info">Divertido</span>
             </div>
+        </div>
+        <div class="hero__buttons-group">
+            <button class="hero__button">
+                Assista Agora
+            </button>
+            <button class="hero__button hero__button--dark">
+                Assista ao Trailer
+            </button>
         </div>
     </section>
     <section class="tabs">
@@ -159,11 +168,10 @@
                     </a>
                 </li>
             </ul>
-            <p class="footer__text">© 1996-2023, Vingadores Ultimato, Inc. ou respetivas afiliadas</p>
+            <p class="footer__text">&copy; 1996-2023, Vingadores Ultimato, Inc. ou respetivas afiliadas</p>
         </div>
     </footer>
-
-    <script src="https://kit.fontawesome.com/7ced5a16e0.js" crossorigin="anonymous"></script>
+    
     <script src="src/scripts/main.js"></script>
 </body>
 </html>
