--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./dist/styles/main.css">
-    <title>Document</title>
+    <title>Vingadores Ultimato</title>
 </head>
 <body>
     <header class="header">
@@ -56,6 +56,7 @@
 
     </header>
     <section class="hero">
+        <div class="hero__background"></div>
         <h1>
             <img class="hero__branding-image" src="./src/images/logo.png" alt="">
         </h1>
@@ -78,10 +79,10 @@
             </div>
         </div>
         <div class="hero__buttons-group">
-            <button class="hero__button button">
+            <button class="hero__button">
                 Assista Agora
             </button>
-            <button class="hero__button button button--dark">
+            <button class="hero__button hero__button--dark">
                 Assista ao Trailer
             </button>
         </div>
