--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./dist/styles/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Vingadores Ultimato</title>
 </head>
 <body>
@@ -58,7 +58,7 @@
     <section class="hero">
         <div class="hero__background"></div>
         <h1>
-            <img class="hero__branding-image" src="./src/images/logo.png" alt="">
+            <img class="hero__branding-image" src="./images/logo.png" alt="">
         </h1>
         <h2 class="hero__title">Vingadores Ultimato</h2>
         <p class="hero__text">
@@ -69,7 +69,7 @@
                 <span class="hero__movie-metadata-info">IMDb 8,4</span>
                 <span class="hero__movie-metadata-info">3 h 3 min</span>
                 <span class="hero__movie-metadata-info">2019</span>
-                <img class="hero__movie-metadata-info" src="src/images/12+_icon.png" alt="Classificação indicativa: 12+">
+                <img class="hero__movie-metadata-info" src="./images/12+_icon.png" alt="Classificação indicativa: 12+">
             </div>
             <div class="hero__movie-metadata-group">
                 <span class="hero__movie-metadata-info">Ficção científica</span>
@@ -100,32 +100,32 @@
                 <ul class="tab-content">
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="src/images/other-movies/movie1.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie1.webp" alt="">
                         </a>
                     </li>
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="src/images/other-movies/movie2.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie2.webp" alt="">
                         </a>
                     </li>
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="src/images/other-movies/movie3.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie3.webp" alt="">
                         </a>
                     </li>
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="src/images/other-movies/movie4.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie4.webp" alt="">
                         </a>
                     </li>
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="src/images/other-movies/movie5.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie5.webp" alt="">
                         </a>
                     </li>
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="src/images/other-movies/movie6.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie6.webp" alt="">
                         </a>
                     </li>
                 </ul>
@@ -158,7 +158,7 @@
                             </div>
                             <div class="tab__info-group">
                                 <p class="tab__info-name">Classificação:</p>
-                                <img class="tab__info-image" src="src/images/12+_icon.png" alt="">
+                                <img class="tab__info-image" src="./images/12+_icon.png" alt="">
                                 <p>Violência</p>
                                 <p>Drogas Lícitas</p>
                             </div>
@@ -184,7 +184,7 @@
         </div>
     </section>
     <footer class="footer">
-        <img class="footer__logo" src="src/images/logo.png" alt="">
+        <img class="footer__logo" src="./images/logo.png" alt="">
         <div class="footer__container">
             <ul class="footer__link-list">
                 <li>
@@ -217,7 +217,7 @@
         </div>
     </footer>
     
-    <script src="src/scripts/main.js"></script>
+    <script src="./javascript/main.js"></script>
     <script src="https://kit.fontawesome.com/7ced5a16e0.js" crossorigin="anonymous"></script>
 </body>
 </html>
