mudando logo do filme de posição

--- a/source/index.html
+++ b/source/index.html
@@ -65,7 +65,7 @@
     </div>
     <section class="hero">
         <div class="hero__background"></div>
-        <h1>
+        <h1 class="hero__branding">
             <img class="hero__branding-image" src="./images/logo.png" alt="">
         </h1>
         <h2 class="hero__title">Vingadores Ultimato</h2>
