tornando imagem de fundo fixa

--- a/source/index.html
+++ b/source/index.html
@@ -11,6 +11,8 @@
     <title>Vingadores Ultimato</title>
 </head>
 <body>
+    <div class="background">
+    </div>
     <div class="header-container">
         <header class="header">
             <svg class="branding" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1044.9 568.7">
@@ -64,9 +66,12 @@
         </header>
     </div>
     <section class="hero">
-        <div class="hero__background"></div>
+        <div class="hero__background-container">
+            <img class="hero__background" src="./images/hero-background-image.jpg" alt="Banner de Vingadores Ultimato">
+            <div class="hero__fade"></div>
+        </div>
         <h1 class="hero__branding">
-            <img class="hero__branding-image" src="./images/logo.png" alt="">
+            <img class="hero__branding-image" src="./images/logo.png" alt="Logo de Vingadores Ultimato">
         </h1>
         <h2 class="hero__title">Vingadores Ultimato</h2>
         <p class="hero__text">
@@ -108,42 +113,42 @@
                 <ul class="tab-content">
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="./images/other-movies/movie1.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie1.webp" alt="Filme 1">
                         </a>
                     </li>
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="./images/other-movies/movie2.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie2.webp" alt="Filme 2">
                         </a>
                     </li>
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="./images/other-movies/movie3.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie3.webp" alt="Filme 3">
                         </a>
                     </li>
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="./images/other-movies/movie4.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie4.webp" alt="Filme 4">
                         </a>
                     </li>
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="./images/other-movies/movie5.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie5.webp" alt="Filme 5">
                         </a>
                     </li>
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="./images/other-movies/movie6.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie6.webp" alt="Filme 6">
                         </a>
                     </li>
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="./images/other-movies/movie7.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie7.webp" alt="Filme 7">
                         </a>
                     </li>
                     <li class="tab-content__movie">
                         <a class="tab-content__movie-link" href="">
-                            <img class="tab-content__movie-image" src="./images/other-movies/movie8.webp" alt="">
+                            <img class="tab-content__movie-image" src="./images/other-movies/movie8.webp" alt="Filme 8">
                         </a>
                     </li>
                 </ul>
@@ -176,7 +181,7 @@
                             </div>
                             <div class="tab__info-group">
                                 <p class="tab__info-name">Classificação:</p>
-                                <img class="tab__info-image" src="./images/12+_icon.png" alt="">
+                                <img class="tab__info-image" src="./images/12+_icon.png" alt="Classificação indicativa: 12+">
                                 <p>Violência</p>
                                 <p>Drogas Lícitas</p>
                             </div>
@@ -202,34 +207,22 @@
         </div>
     </section>
     <footer class="footer">
-        <img class="footer__logo" src="./images/logo.png" alt="">
+        <img class="footer__logo" src="./images/logo.png" alt="Logo de Vingadores Ultimato">
         <div class="footer__container">
             <ul class="footer__link-list">
                 <li>
-                    <a href="" class="footer__link">
-                        Termos e Aviso de Privacidade
-                    </a>
+                    <a href="" class="footer__link">Termos e Aviso de Privacidade</a>
                 </li>
                 <li>
-                    <a href="" class="footer__link">
-                        Envie-nos comentários
-                    </a>
+                    <a href="" class="footer__link">Envie-nos comentários</a>
                 </li>
                 <li>
-                    <a href="" class="footer__link">
-                        Ajuda
-                    </a>
+                    <a href="" class="footer__link">Ajuda</a>
                 </li>
                 <li>
-                    <a href="" class="footer__link">
-                        Proteção de Dados no Brasil
-                    </a>
+                    <a href="" class="footer__link">Proteção de Dados no Brasil</a>
                 </li>
-                <li>
-                    <a href="" class="footer__link">
-                        Anúncios personalizados
-                    </a>
-                </li>
+                <li><a href="" class="footer__link">Anúncios personalizados</a></li>
             </ul>
             <p class="footer__text">&copy; 1996-2023, Vingadores Ultimato, Inc. ou respetivas afiliadas</p>
         </div>
