--- a/source/index.html
+++ b/source/index.html
@@ -66,7 +66,7 @@
     </div>
     <section class="hero">
         <div class="hero__background-container">
-            <img class="hero__background" lang="pt-BR" src="./images/hero-background-image.jpg" alt="Imagem de Fundo do Vingadores: Ultimato">
+            <img class="hero__background" lang="pt-BR" src="./images/background.webp" alt="Imagem de Fundo do Vingadores: Ultimato">
             <div class="hero__fade"></div>
         </div>
         <h1 class="hero__branding">
