melhorando suporte à multiplos idiomas

--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.css">
     <link rel="stylesheet" href="./css/main.css">
     <title lang="pt-BR" >Vingadores: Ultimato</title>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script type="text/javascript">
+        document.documentElement.className = "js"
+    </script>
 </head>
 <body>
     <div class="background">
@@ -20,8 +24,8 @@
             <div class="navegation-container">
                 <nav class="navegation">
                     <ul class="navegation__list">
-                        <li class="navegation__item" lang="pt-BR">Página inicial</li>
-                        <li class="navegation__item" lang="pt-BR">Sobre</li>
+                        <li class="navegation__item" lang="pt-BR"></li>
+                        <li class="navegation__item" lang="pt-BR"></li>
                         <li class="navegation__item">
                             <span lang="pt-BR">Categorias</span>
                             <div class="navegation__arrow">
@@ -31,11 +35,11 @@
                             </div>
                             <div class="navegation__submenu" id="genre-submenu">
                                 <ul>
-                                    <li class="navegation__submenu-item" lang="pt-BR">Terror</li>
-                                    <li class="navegation__submenu-item" lang="pt-BR">Ação</li>
-                                    <li class="navegation__submenu-item" lang="pt-BR">Aventura</li>
-                                    <li class="navegation__submenu-item" lang="pt-BR">Comédia</li>
-                                    <li class="navegation__submenu-item" lang="pt-BR">Romance</li>
+                                    <li class="navegation__submenu-item" lang="pt-BR"></li>
+                                    <li class="navegation__submenu-item" lang="pt-BR"></li>
+                                    <li class="navegation__submenu-item" lang="pt-BR"></li>
+                                    <li class="navegation__submenu-item" lang="pt-BR"></li>
+                                    <li class="navegation__submenu-item" lang="pt-BR"></li>
                                 </ul>
                             </div>
                         </li>
@@ -48,8 +52,8 @@
                             </div>
                             <div class="navegation__submenu" id="lang-submenu">
                                 <ul>
-                                    <li class="navegation__submenu-item lang-option selected">Português</li>
-                                    <li class="navegation__submenu-item lang-option">English</li>
+                                    <a href="#pt-br" data-reload class="navegation__submenu-item lang-option">Português</a>
+                                    <a href="#en" data-reload class="navegation__submenu-item lang-option">English</a>
                                 </ul>
                             </div>
                         </li>
@@ -72,9 +76,9 @@
         <h1 class="hero__branding">
             <div class="hero__branding-image"></div>
         </h1>
-        <h2 class="hero__title" lang="pt-BR">Vingadores: Ultimato</h2>
+        <h2 class="hero__title" lang="pt-BR"></h2>
         <p class="hero__text" lang="pt-BR">
-            No final épico da Saga do Infinito, os Vingadores enfrentam Thanos. Quando eventos devastadores eliminam metade da população mundial e dividem suas fileiras, o resto dos heróis lutam para avançar. Mas eles devem se unir para restaurar a ordem e a harmonia no universo e trazer de volta seus entes queridos.
+            
         </p>
         <div class="hero__movie-metadata">
             <div class="hero__movie-metadata-group">
@@ -84,77 +88,77 @@
                 <img class="hero__movie-metadata-info" lang="pt-BR" src="./images/12+_icon.png" alt="Classificação indicativa: 12+">
             </div>
             <div class="hero__movie-metadata-group">
-                <span class="hero__movie-metadata-info" lang="pt-BR">Ficção científica</span>
-                <span class="hero__movie-metadata-info" lang="pt-BR">Fantasia</span>
-                <span class="hero__movie-metadata-info" lang="pt-BR">Super-Heróis</span>
-                <span class="hero__movie-metadata-info" lang="pt-BR">Ação e aventura</span>
+                <span class="hero__movie-metadata-info" lang="pt-BR"></span>
+                <span class="hero__movie-metadata-info" lang="pt-BR"></span>
+                <span class="hero__movie-metadata-info" lang="pt-BR"></span>
+                <span class="hero__movie-metadata-info" lang="pt-BR"></span>
             </div>
         </div>
         <div class="hero__buttons-group">
             <button class="hero__button" lang="pt-BR">
-                Assista Agora
+
             </button>
             <button class="hero__button hero__button--dark" lang="pt-BR">
-                Assista ao Trailer
+
             </button>
         </div>
     </section>
     <section class="tabs">
         <nav class="tab-navegation">
-            <button data-tab-button="related" class="tab-navegation-button tab-navegation-button--is-active" lang="pt-BR">Relacionados</button>
-            <button data-tab-button="details" class="tab-navegation-button" lang="pt-BR">Detalhes</button>
+            <button data-tab-button="related" class="tab-navegation-button tab-navegation-button--is-active" lang="pt-BR"></button>
+            <button data-tab-button="details" class="tab-navegation-button" lang="pt-BR"></button>
         </nav>
         <div data-tab-id="related" class="tab-container">
             <div class="tab tab--show">
-                <h2 class="tab-name" lang="pt-BR">Outros usuários também assistiram</h2>
+                <h2 class="tab-name" lang="pt-BR"></h2>
                 <hr>
                 <div style="position: relative;" class="gallery js-flickity" data-flickity-options='{ "wrapAround": true, "pageDots": false }'>
                     <div class="gallery-cell">
                         <span class="watch-this-show">
                             <i class="fa-solid fa-circle-play"></i>
-                            <span lang="pt-BR">Assista Agora</span>
+                            <span lang="pt-BR"></span>
                         </span>
                     </div>
                     <div class="gallery-cell">
                         <span class="watch-this-show">
                             <i class="fa-solid fa-circle-play"></i>
-                            <span lang="pt-BR">Assista Agora</span>
+                            <span lang="pt-BR"></span>
                         </span>
                     </div>
                     <div class="gallery-cell">
                         <span class="watch-this-show">
                             <i class="fa-solid fa-circle-play"></i>
-                            <span lang="pt-BR">Assista Agora</span>
+                            <span lang="pt-BR"></span>
                         </span>
                     </div>
                     <div class="gallery-cell">
                         <span class="watch-this-show">
                             <i class="fa-solid fa-circle-play"></i>
-                            <span lang="pt-BR">Assista Agora</span>
+                            <span lang="pt-BR"></span>
                         </span>
                     </div>
                     <div class="gallery-cell">
                         <span class="watch-this-show">
                             <i class="fa-solid fa-circle-play"></i>
-                            <span lang="pt-BR">Assista Agora</span>
+                            <span lang="pt-BR"></span>
                         </span>
                     </div>
                     <div class="gallery-cell">
                         <span class="watch-this-show">
                             <i class="fa-solid fa-circle-play"></i>
-                            <span lang="pt-BR">Assista Agora</span>
+                            <span lang="pt-BR"></span>
                         </span>
                     </div>
                     <div class="gallery-cell">
                         <span class="watch-this-show">
                             <i class="fa-solid fa-circle-play"></i>
-                            <span lang="pt-BR">Assista Agora</span>
+                            <span lang="pt-BR"></span>
                         </span>
                     </div>
                     <div class="gallery-cell">
                         <span class="watch-this-show">
                             <i class="fa-solid fa-circle-play"></i>
-                            <span lang="pt-BR">Assista Agora</span>
+                            <span lang="pt-BR"></span>
                         </span>
                     </div>
                 </div>
@@ -162,43 +166,43 @@
         </div>
         <div data-tab-id="details" class="tab-container">
             <div class="tab">
-                <h2 class="tab-name" lang="pt-BR">Detalhes</h2>
+                <h2 class="tab-name" lang="pt-BR"></h2>
                 <hr>
                 <br>
                 <div class="tab-content">
                     <div class="tab__movie-synopsis">
                         <p lang="pt-BR">
-                            No final épico da Saga do Infinito, os Vingadores enfrentam o vilão mais poderoso do universo, Thanos. Quando eventos devastadores eliminam metade da população mundial e dividem suas fileiras, o resto dos heróis lutam para avançar. Mas eles devem se unir para restaurar a ordem e a harmonia no universo e trazer de volta seus entes queridos. Algumas sequências ou padrões de luz intermitente podem afetar telespectadores fotossensíveis.
+                            
                         </p>
                     </div>
                     <div class="tab__movie-details">
                         <div class="tab__movie-details-overview">
                             <div class="tab__info-group">
-                                <p class="tab__info-name" lang="pt-BR">Duração:</p>
+                                <p class="tab__info-name" lang="pt-BR"></p>
                                 <p>3h 5min</p>
                             </div>
                             <div class="tab__info-group">
-                                <p class="tab__info-name" lang="pt-BR">Data de lançamento:</p>
+                                <p class="tab__info-name" lang="pt-BR"></p>
                                 <p>2019</p>
                             </div>
                             <div class="tab__info-group">
                                 <p class="tab__info-name" lang="pt-BR">Gênero:</p>
-                                <p lang="pt-BR">Ficção científica, Fantasia, Super-Heróis, Ação e aventura</p>
+                                <p lang="pt-BR"></p>
                             </div>
                             <div class="tab__info-group">
-                                <p class="tab__info-name" lang="pt-BR">Classificação:</p>
+                                <p class="tab__info-name" lang="pt-BR"></p>
                                 <img class="tab__info-image" src="./images/12+_icon.png" lang="pt-BR" alt="Classificação indicativa: 12+">
-                                <p lang="pt-BR">Violência</p>
-                                <p lang="pt-BR">Drogas Lícitas</p>
+                                <p lang="pt-BR"></p>
+                                <p lang="pt-BR"></p>
                             </div>
                         </div>
                         <div class="tab__movie-details-cast">
                             <div class="tab__info-group">
-                                <p class="tab__info-name" lang="pt-BR">Direção:</p>
+                                <p class="tab__info-name" lang="pt-BR"></p>
                                 <p>Anthony Russo, Joe Russo</p>
                             </div>
                             <div class="tab__info-group">
-                                <p class="tab__info-name" lang="pt-BR">Elenco:</p>
+                                <p class="tab__info-name" lang="pt-BR"></p>
                                 <p>Robert Downey Jr.</p>
                                 <p>Chris Evans</p>
                                 <p>Mark Ruffalo</p>
@@ -217,20 +221,20 @@
         <div class="footer__container">
             <ul class="footer__link-list">
                 <li>
-                    <a href="" class="footer__link" lang="pt-BR">Termos e Aviso de Privacidade</a>
+                    <a href="" class="footer__link" lang="pt-BR"></a>
                 </li>
                 <li>
-                    <a href="" class="footer__link" lang="pt-BR">Envie-nos comentários</a>
+                    <a href="" class="footer__link" lang="pt-BR"></a>
                 </li>
                 <li>
-                    <a href="" class="footer__link" lang="pt-BR">Ajuda</a>
+                    <a href="" class="footer__link" lang="pt-BR"></a>
                 </li>
                 <li>
-                    <a href="" class="footer__link" lang="pt-BR">Proteção de Dados no Brasil</a>
+                    <a href="" class="footer__link" lang="pt-BR"></a>
                 </li>
-                <li><a href="" class="footer__link" lang="pt-BR">Anúncios personalizados</a></li>
+                <li><a href="" class="footer__link" lang="pt-BR"></a></li>
             </ul>
-            <p class="footer__text">&copy; <span lang="pt-BR">1996-2023, Vingadores Ultimato, Inc. ou respetivas afiliadas</span></p>
+            <p class="footer__text">&copy; <span lang="pt-BR"></span></p>
         </div>
     </footer>
     <script src="javascript/main.js"></script>
