--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="./css/main.css">
     <title lang="pt-BR" >Vingadores: Ultimato</title>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script type="text/javascript">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <script>
         document.documentElement.className = "js"
     </script>
 </head>
@@ -52,8 +53,8 @@
                             </div>
                             <div class="navegation__submenu" id="lang-submenu">
                                 <ul>
-                                    <a href="#pt-br" data-reload class="navegation__submenu-item lang-option">Português</a>
-                                    <a href="#en" data-reload class="navegation__submenu-item lang-option">English</a>
+                                    <a href="#pt-br" class="navegation__submenu-item lang-option">Português</a>
+                                    <a href="#en" class="navegation__submenu-item lang-option">English</a>
                                 </ul>
                             </div>
                         </li>
