adicionando animação nos botões

--- a/source/index.html
+++ b/source/index.html
@@ -96,10 +96,10 @@
             </div>
         </div>
         <div class="hero__buttons-group">
-            <button class="hero__button" lang="pt-BR">
+            <button class="hero__button ripple" lang="pt-BR">
 
             </button>
-            <button class="hero__button hero__button--dark" lang="pt-BR">
+            <button class="hero__button hero__button--dark ripple" lang="pt-BR">
 
             </button>
         </div>
