removendo conteúdo desnecessário

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title lang="pt-BR" >Vingadores: Ultimato</title>
+    <title lang="pt-BR" ></title>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <script>
