melhorias no javascript

--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="header-container">
         <header class="header">
-            <img class="branding" src="images/disney-logo.svg" lang="pt-BR" alt="Logo da Disney+">
+            <img class="branding" src="images/disney-logo.svg" lang="pt-BR" alt="">
             <div class="navegation-container">
                 <nav class="navegation">
                     <ul class="navegation__list">
@@ -71,7 +71,7 @@
     </div>
     <section class="hero">
         <div class="hero__background-container">
-            <img class="hero__background" lang="pt-BR" src="./images/background.webp" alt="Imagem de Fundo do Vingadores: Ultimato">
+            <img class="hero__background" lang="pt-BR" src="./images/background.webp" alt="">
             <div class="hero__fade"></div>
         </div>
         <h1 class="hero__branding">
@@ -86,7 +86,7 @@
                 <span class="hero__movie-metadata-info">IMDb 8,4</span>
                 <span class="hero__movie-metadata-info">3 h 3 min</span>
                 <span class="hero__movie-metadata-info">2019</span>
-                <img class="hero__movie-metadata-info" lang="pt-BR" src="./images/12+_icon.png" alt="Classificação indicativa: 12+">
+                <img class="hero__movie-metadata-info" lang="pt-BR" src="./images/12+_icon.png" alt="">
             </div>
             <div class="hero__movie-metadata-group">
                 <span class="hero__movie-metadata-info" lang="pt-BR"></span>
@@ -113,6 +113,7 @@
             <div class="tab tab--show">
                 <h2 class="tab-name" lang="pt-BR"></h2>
                 <hr>
+                <br>
                 <div style="position: relative;" class="gallery js-flickity" data-flickity-options='{ "wrapAround": true, "pageDots": false }'>
                     <div class="gallery-cell">
                         <span class="watch-this-show">
@@ -187,12 +188,12 @@
                                 <p>2019</p>
                             </div>
                             <div class="tab__info-group">
-                                <p class="tab__info-name" lang="pt-BR">Gênero:</p>
+                                <p class="tab__info-name" lang="pt-BR">:</p>
                                 <p lang="pt-BR"></p>
                             </div>
                             <div class="tab__info-group">
                                 <p class="tab__info-name" lang="pt-BR"></p>
-                                <img class="tab__info-image" src="./images/12+_icon.png" lang="pt-BR" alt="Classificação indicativa: 12+">
+                                <img class="tab__info-image" src="./images/12+_icon.png" lang="pt-BR" alt="">
                                 <p lang="pt-BR"></p>
                                 <p lang="pt-BR"></p>
                             </div>
@@ -218,7 +219,7 @@
         </div>
     </section>
     <footer class="footer">
-        <img class="footer__logo" src="images/disney-logo.svg" lang="pt-BR" alt="Logo da Disney+">
+        <img class="footer__logo" src="images/disney-logo.svg" lang="pt-BR" alt="">
         <div class="footer__container">
             <ul class="footer__link-list">
                 <li>
